# CodeLibrary

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build_cmake.yml
CodeLibrary/: CodeLibrary.vcxproj  CodeLibrary.vcxproj.filters
CodeLibrary/Bitwise/: Parity.hpp
CodeLibrary/CommonTypes/: Vector.hpp
CodeLibrary/Conversions/: UnderlyingType.hpp
CodeLibrary/Mathematics/: numeric_approximation.h
CodeLibrary/Preprocessor/: disable_warning.hpp
CodeLibrary/Rules/: special_member_functions.hpp  standard_rules.hpp
CodeLibrary/STL/: erase.hpp
CodeLibrary/String/: demangle.hpp
CodeLibrary/TMP/: Conditions.hpp  Const.hpp  const_conversions.hpp
CodeLibrary/TMP/Conditions/: conditions.hpp  has_function.hpp  is_instance_of.hpp  type_trait_conditions.hpp
CodeLibraryTest/: CodeLibraryTest.vcxproj  CodeLibraryTest.vcxproj.filters  main.cpp
CodeLibraryTest/CommonTypes/: VectorTest.cpp
CodeLibraryTest/Conversions/: UnderlyingTypeTest.cpp
CodeLibraryTest/TMP/: has_function_test.cpp
include/code_library/algorithm/sorting/: insertion_sort.hpp
include/code_library/assertions/: standard_rules.hpp
include/code_library/bitwise/: most_significant_bit.hpp  parity.hpp
include/code_library/conditions/: has_function.hpp  is_container.hpp  is_instance_of.hpp  type_traits_conditions.hpp
include/code_library/conversions/: const_conversions.hpp  underlying_type.hpp
include/code_library/interface/: factory.hpp
include/code_library/stl/: erase.hpp  iterators.hpp
include/code_library/string/: demangle.hpp
include/code_library/units/: unit.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt
test/algorithm/sorting/: insertion_sort_tests.cpp  sorting_test_values.hpp
test/assertions/: standard_rules_tests.cpp
test/bitwise/: parity_tests.cpp
test/conditions/: has_function_tests.cpp
test/conversions/: underlying_type_tests.cpp
